pybackend/ExpParser.py
# Generated from Exp.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ExpParser ( Parser ):

    grammarFileName = "Exp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'method'", "'{'", "':'", "'}'", "'('", 
                     "')'", "'::'", "'not'", "'==>'", "'\u21A6'", "'part'", 
                     "','", "'\u2297'", "'assert'", "';'", "'var'", "':='", 
                     "'*='", "'measure'", "'sin'", "'cos'", "'sqrt'", "'|'", 
                     "'\u03C9'", "'['", "']'", "'->'", "'Q'", "'axiom'", 
                     "'function'", "'ensures'", "'requires'", "'returns'", 
                     "'forall'", "'nat'", "'real'", "'int'", "'bool'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'^'", "'nor'", "'had'", 
                     "'H'", "'QFT'", "'RQFT'", "'aa'", "'en'", "'if'", "'for'", 
                     "'\u03BB'", "'\u27E9'", "<INVALID>", "<INVALID>", "'\u2295'", 
                     "'invariant'", "'.'", "'&&'", "'||'", "'>='", "'<='", 
                     "'=='", "'<'", "'>'", "'=>'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'@'", "'...'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Axiom", "Function", "Ensures", "Requires", 
                      "Returns", "Forall", "TNat", "TReal", "TInt", "TBool", 
                      "TAdd", "TSub", "TMul", "TDiv", "TMod", "TExp", "Nor", 
                      "Had", "SHad", "SQFT", "RQFT", "AA", "En", "If", "For", 
                      "TCl", "TKet", "TIn", "TSum", "OPlus", "Invariant", 
                      "Dot", "And", "OR", "GE", "LE", "EQ", "LT", "GT", 
                      "ARROW", "Number", "ID", "Letter", "LetterOrDigit", 
                      "AT", "ELLIPSIS", "WS", "Comment", "Line_Comment" ]

    RULE_program = 0
    RULE_method = 1
    RULE_returna = 2
    RULE_conds = 3
    RULE_invariants = 4
    RULE_stmts = 5
    RULE_stmt = 6
    RULE_spec = 7
    RULE_allspec = 8
    RULE_bexp = 9
    RULE_qbool = 10
    RULE_logicImply = 11
    RULE_logicOrExp = 12
    RULE_logicAndExp = 13
    RULE_logicNotExp = 14
    RULE_chainBExp = 15
    RULE_comOp = 16
    RULE_qunspec = 17
    RULE_qspec = 18
    RULE_partspec = 19
    RULE_tensorall = 20
    RULE_sumspec = 21
    RULE_maySum = 22
    RULE_asserting = 23
    RULE_casting = 24
    RULE_varcreate = 25
    RULE_assigning = 26
    RULE_ids = 27
    RULE_qassign = 28
    RULE_measure = 29
    RULE_ifexp = 30
    RULE_forexp = 31
    RULE_fcall = 32
    RULE_arithExprs = 33
    RULE_arithExpr = 34
    RULE_arithAtomic = 35
    RULE_sinExpr = 36
    RULE_cosExpr = 37
    RULE_sqrtExpr = 38
    RULE_absExpr = 39
    RULE_omegaExpr = 40
    RULE_expr = 41
    RULE_lambdaT = 42
    RULE_manyket = 43
    RULE_ket = 44
    RULE_qstate = 45
    RULE_bindings = 46
    RULE_binding = 47
    RULE_locus = 48
    RULE_crange = 49
    RULE_index = 50
    RULE_qindex = 51
    RULE_rangeT = 52
    RULE_qrange = 53
    RULE_numexp = 54
    RULE_typeT = 55
    RULE_baseTy = 56
    RULE_qty = 57
    RULE_addOp = 58
    RULE_op = 59
    RULE_reen = 60

    ruleNames =  [ "program", "method", "returna", "conds", "invariants", 
                   "stmts", "stmt", "spec", "allspec", "bexp", "qbool", 
                   "logicImply", "logicOrExp", "logicAndExp", "logicNotExp", 
                   "chainBExp", "comOp", "qunspec", "qspec", "partspec", 
                   "tensorall", "sumspec", "maySum", "asserting", "casting", 
                   "varcreate", "assigning", "ids", "qassign", "measure", 
                   "ifexp", "forexp", "fcall", "arithExprs", "arithExpr", 
                   "arithAtomic", "sinExpr", "cosExpr", "sqrtExpr", "absExpr", 
                   "omegaExpr", "expr", "lambdaT", "manyket", "ket", "qstate", 
                   "bindings", "binding", "locus", "crange", "index", "qindex", 
                   "rangeT", "qrange", "numexp", "typeT", "baseTy", "qty", 
                   "addOp", "op", "reen" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    Axiom=29
    Function=30
    Ensures=31
    Requires=32
    Returns=33
    Forall=34
    TNat=35
    TReal=36
    TInt=37
    TBool=38
    TAdd=39
    TSub=40
    TMul=41
    TDiv=42
    TMod=43
    TExp=44
    Nor=45
    Had=46
    SHad=47
    SQFT=48
    RQFT=49
    AA=50
    En=51
    If=52
    For=53
    TCl=54
    TKet=55
    TIn=56
    TSum=57
    OPlus=58
    Invariant=59
    Dot=60
    And=61
    OR=62
    GE=63
    LE=64
    EQ=65
    LT=66
    GT=67
    ARROW=68
    Number=69
    ID=70
    Letter=71
    LetterOrDigit=72
    AT=73
    ELLIPSIS=74
    WS=75
    Comment=76
    Line_Comment=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExpParser.EOF, 0)

        def method(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.MethodContext)
            else:
                return self.getTypedRuleContext(ExpParser.MethodContext,i)


        def getRuleIndex(self):
            return ExpParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExpParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 122
                self.method()
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==ExpParser.T__0):
                    break

            self.state = 127
            self.match(ExpParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExpParser.ID, 0)

        def bindings(self):
            return self.getTypedRuleContext(ExpParser.BindingsContext,0)


        def conds(self):
            return self.getTypedRuleContext(ExpParser.CondsContext,0)


        def stmts(self):
            return self.getTypedRuleContext(ExpParser.StmtsContext,0)


        def Axiom(self):
            return self.getToken(ExpParser.Axiom, 0)

        def Returns(self):
            return self.getToken(ExpParser.Returns, 0)

        def returna(self):
            return self.getTypedRuleContext(ExpParser.ReturnaContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = ExpParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_method)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(ExpParser.T__0)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExpParser.T__1:
                self.state = 130
                self.match(ExpParser.T__1)
                self.state = 131
                self.match(ExpParser.T__2)
                self.state = 132
                self.match(ExpParser.Axiom)
                self.state = 133
                self.match(ExpParser.T__3)


            self.state = 136
            self.match(ExpParser.ID)
            self.state = 137
            self.match(ExpParser.T__4)
            self.state = 138
            self.bindings()
            self.state = 139
            self.match(ExpParser.T__5)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ExpParser.Returns:
                self.state = 140
                self.match(ExpParser.Returns)
                self.state = 141
                self.returna()


            self.state = 144
            self.conds()
            self.state = 145
            self.match(ExpParser.T__1)
            self.state = 146
            self.stmts()
            self.state = 147
            self.match(ExpParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bindings(self):
            return self.getTypedRuleContext(ExpParser.BindingsContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_returna

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturna" ):
                listener.enterReturna(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturna" ):
                listener.exitReturna(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturna" ):
                return visitor.visitReturna(self)
            else:
                return visitor.visitChildren(self)




    def returna(self):

        localctx = ExpParser.ReturnaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_returna)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(ExpParser.T__4)
            self.state = 150
            self.bindings()
            self.state = 151
            self.match(ExpParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reen(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.ReenContext)
            else:
                return self.getTypedRuleContext(ExpParser.ReenContext,i)


        def spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.SpecContext)
            else:
                return self.getTypedRuleContext(ExpParser.SpecContext,i)


        def getRuleIndex(self):
            return ExpParser.RULE_conds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConds" ):
                listener.enterConds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConds" ):
                listener.exitConds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConds" ):
                return visitor.visitConds(self)
            else:
                return visitor.visitChildren(self)




    def conds(self):

        localctx = ExpParser.CondsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_conds)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ExpParser.Ensures or _la==ExpParser.Requires:
                self.state = 153
                self.reen()
                self.state = 154
                self.spec()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvariantsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Invariant(self, i:int=None):
            if i is None:
                return self.getTokens(ExpParser.Invariant)
            else:
                return self.getToken(ExpParser.Invariant, i)

        def spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.SpecContext)
            else:
                return self.getTypedRuleContext(ExpParser.SpecContext,i)


        def getRuleIndex(self):
            return ExpParser.RULE_invariants

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvariants" ):
                listener.enterInvariants(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvariants" ):
                listener.exitInvariants(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvariants" ):
                return visitor.visitInvariants(self)
            else:
                return visitor.visitChildren(self)




    def invariants(self):

        localctx = ExpParser.InvariantsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_invariants)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ExpParser.Invariant:
                self.state = 161
                self.match(ExpParser.Invariant)
                self.state = 162
                self.spec()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.StmtContext)
            else:
                return self.getTypedRuleContext(ExpParser.StmtContext,i)


        def getRuleIndex(self):
            return ExpParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts" ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts" ):
                listener.exitStmts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts" ):
                return visitor.visitStmts(self)
            else:
                return visitor.visitChildren(self)




    def stmts(self):

        localctx = ExpParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExpParser.T__4) | (1 << ExpParser.T__13) | (1 << ExpParser.T__15) | (1 << ExpParser.If) | (1 << ExpParser.For))) != 0) or _la==ExpParser.ID:
                self.state = 168
                self.stmt()
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asserting(self):
            return self.getTypedRuleContext(ExpParser.AssertingContext,0)


        def casting(self):
            return self.getTypedRuleContext(ExpParser.CastingContext,0)


        def varcreate(self):
            return self.getTypedRuleContext(ExpParser.VarcreateContext,0)


        def assigning(self):
            return self.getTypedRuleContext(ExpParser.AssigningContext,0)


        def qassign(self):
            return self.getTypedRuleContext(ExpParser.QassignContext,0)


        def measure(self):
            return self.getTypedRuleContext(ExpParser.MeasureContext,0)


        def ifexp(self):
            return self.getTypedRuleContext(ExpParser.IfexpContext,0)


        def forexp(self):
            return self.getTypedRuleContext(ExpParser.ForexpContext,0)


        def fcall(self):
            return self.getTypedRuleContext(ExpParser.FcallContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = ExpParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt)
        try:
            self.state = 183
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.asserting()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.casting()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.varcreate()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 177
                self.assigning()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 178
                self.qassign()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 179
                self.measure()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 180
                self.ifexp()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 181
                self.forexp()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 182
                self.fcall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qunspec(self):
            return self.getTypedRuleContext(ExpParser.QunspecContext,0)


        def allspec(self):
            return self.getTypedRuleContext(ExpParser.AllspecContext,0)


        def logicImply(self):
            return self.getTypedRuleContext(ExpParser.LogicImplyContext,0)


        def chainBExp(self):
            return self.getTypedRuleContext(ExpParser.ChainBExpContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpec" ):
                listener.enterSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpec" ):
                listener.exitSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSpec" ):
                return visitor.visitSpec(self)
            else:
                return visitor.visitChildren(self)




    def spec(self):

        localctx = ExpParser.SpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_spec)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.qunspec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.allspec()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 187
                self.logicImply()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 188
                self.chainBExp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllspecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Forall(self):
            return self.getToken(ExpParser.Forall, 0)

        def binding(self):
            return self.getTypedRuleContext(ExpParser.BindingContext,0)


        def logicImply(self):
            return self.getTypedRuleContext(ExpParser.LogicImplyContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_allspec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllspec" ):
                listener.enterAllspec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllspec" ):
                listener.exitAllspec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAllspec" ):
                return visitor.visitAllspec(self)
            else:
                return visitor.visitChildren(self)




    def allspec(self):

        localctx = ExpParser.AllspecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_allspec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(ExpParser.Forall)
            self.state = 192
            self.binding()
            self.state = 193
            self.match(ExpParser.T__6)
            self.state = 194
            self.logicImply()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BexpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicOrExp(self):
            return self.getTypedRuleContext(ExpParser.LogicOrExpContext,0)


        def qbool(self):
            return self.getTypedRuleContext(ExpParser.QboolContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_bexp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBexp" ):
                listener.enterBexp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBexp" ):
                listener.exitBexp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBexp" ):
                return visitor.visitBexp(self)
            else:
                return visitor.visitChildren(self)




    def bexp(self):

        localctx = ExpParser.BexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bexp)
        try:
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 196
                self.logicOrExp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 197
                self.qbool()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QboolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qindex(self):
            return self.getTypedRuleContext(ExpParser.QindexContext,0)


        def arithExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpParser.ArithExprContext)
            else:
                return self.getTypedRuleContext(ExpParser.ArithExprContext,i)


        def comOp(self):
            return self.getTypedRuleContext(ExpParser.ComOpContext,0)


        def AT(self):
            return self.getToken(ExpParser.AT, 0)

        def qbool(self):
            return self.getTypedRuleContext(ExpParser.QboolContext,0)


        def getRuleIndex(self):
            return ExpParser.RULE_qbool

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQbool" ):
                listener.enterQbool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQbool" ):
                listener.exitQbool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQbool" ):
                return visitor.visitQbool(self)
            else:
                return visitor.visitChildren(self)




    def qbool(self):

        localctx = ExpParser.QboolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_qbool)
        try:
            self.state = 209
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 200
                self.qindex()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.arithExpr()
                self.state = 202
                self.comOp()
                self.state = 203
                self.arithExpr()
                self.state = 204
                self.match(ExpParser.AT)
                self.state = 205
                self.qindex()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 207
                self.match(ExpParser.T__7)
                self.state = 208
                self.qbool()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicImplyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicOrExp(self):
            return self.getTypedRuleContext(ExpParser.LogicOrExpContext,0)

